<resources>
    <string name="app_name">快乐兄弟用工雇主端</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_msg">通知消息</string>
    <string name="action_fankui">问题反馈</string>

    //header
    <string name="userLoginHeader">用户登录</string>
    <string name="registerHeader">用户注册</string>

    <!--其他页面中的相关文字-->
    <string name="isLoading">正在登录</string>
    <string name="enterAccount">请输入手机号</string>
    <string name="enterPassword">请输入密码</string>
    <string name="forgetPassword">忘记密码？</string>
    <string name="register">注册</string>
    <string name="registerUsername">用 户 名</string>
    <string name="enterYourUsername">请输入您的用户名</string>
    <string name="setPassword">密 码</string>
    <string name="enterYourPassword">请输入您的密码</string>
    <string name="confirmPassword">确认密码</string>
    <string name="reconfirmPassword">请确认您的密码</string>
    //用户协议
    <string name="userAgreeHeader">用户协议</string>
    <string name="userAgreeContent">用户服务协议1、 总则
1.1
北京拉一把科技有限公司及拉一把App（以下简称拉一把）同意按照本协议的规定及其不时发布的操作规则提供拉一把（www.layib.com）网络服务，为获得网络服务，服务使用人（以下称“用户”，包括企业、个人等）应当同意本协议的全部条款并按照页面上的提示完成全部的注册程序。用户在进行注册程序过程中点击“同意”按钮即表示用户完全接受本协议项下的全部条款。
1.2
用户注册成功后，其用户帐号和密码由用户负责保管；用户应当对以其用户帐号进行的所有活动和事件负法律责任。
1.3
拉一把在必要时修改协议内容，并以电子邮件、传真或其它适当方法通知您。如果您不同意本协议修改后的内容，应通知本网站，则您将不再受本协议的约束，您所享有的会员资格与服务也将中止；如果您继续使用本网站，将被视为同意协议修改后的内容。
2、 用户使用规则  
2.1
遵守中华人民共和国相关法律法规，包括但不限于《中华人民共和国计算机信息系统安全保护条例》、《计算机软件保护条例》、《最高人民法院关于审理涉及计算机网络著作权纠纷案件适用法律若干问题的解释(法释[2004]1号)》、《全国人大常委会关于维护互联网安全的决定》、《互联网电子公告服务管理规定》、《互联网新闻信息服务管理规定》、《互联网著作权行政保护办法》和《信息网络传播权保护条例》等有关计算机互联网规定和知识产权的法律和法规。 
2.2
用户在申请使用拉一把服务时，必须向拉一把提供准确的个人资料，如个人资料有任何变动，必须及时更新。
2.3
用户不应将其帐号、密码转让或出借予他人使用。如用户发现其帐号遭他人非法使用，应立即通知拉一把客服。因黑客行为或用户的保管疏忽导致帐号、密码遭他人非法使用，拉一把不承担任何责任。
2.4
用户对其自行发表、上传或传送的内容负全部责任，所有用户不得在本社区任何页面发布、转载、传送含有下列内容之一的信息，否则本社区有权自行处理并不通知用户： 
(1)违反宪法确定的基本原则的； 
(2)危害国家安全，泄漏国家机密，颠覆国家政权，破坏国家统一的； 
(3)损害国家荣誉和利益的； 
(4)煽动民族仇恨、民族歧视，破坏民族团结的； 
(5)破坏国家宗教政策，宣扬邪教和封建迷信的； 
(6)散布谣言，扰乱社会秩序，破坏社会稳定的； 
(7)散布淫秽、色情、赌博、暴力、恐怖或者教唆犯罪的； 
(8)侮辱或者诽谤他人，侵害他人合法权益的； 
(9)煽动非法集会、结社、游行、示威、聚众扰乱社会秩序的； 
(10)以非法民间组织名义活动的； 
(11)含有法律、行政法规禁止的其他内容的。 
2.5
用户在使用拉一把服务同时应做到： 
(1)遵守所有与网络服务有关的网络协议、规定和程序；
(2)不得为任何非法目的而使用网络服务系统；
(3)不得侵犯其他任何第三方的专利权、著作权、商标权、名誉权或其他任何合法权益； 
(4)不得利用拉一把网络服务系统进行未经拉一把授权的广告； 
(5)用户接受以其注册的电子邮件地址接收拉一把发送的邮件或其他邮件资料，若希望"退订"这些邮件资料，可点击电子邮件中的退订链接退订，也可向拉一把客服邮箱发邮件申请。
(6)用户不得通过任何技术手段侵入拉一把数据库，进行查阅、直接下载或者转发等功能操作，一经发现拉一把网有权停止该用户的账户所有功能，并停止为该用户所在公司名下的所有其他用户提供任何服务。
(7)用户有义务保证其在拉一把网上发布的信息的真实性，不得夸张描述或编造虚假信息，一经发现，拉一把网有权停止相应账户的所有功能，同时停止与该账户所有相关联账户的全部功能，并扣除保证金。
2.6
如用户违反以上规则造成拉一把被第三方索赔的，用户应全额补偿拉一把一切费用(包括但不限于各种赔偿费、诉讼代理费及为此支出的其它合理费用)； 
2.7
如用户违反以上规则，拉一把网有权要求用户改正或直接采取一切必要的措施(包括但不限于删除用户发布的内容、暂停或终止用户使用网络服务的权利)以减轻用户不当行为而造成的影响，被终止使用网络服务的用户已缴纳的费用不予以退还。 
2.8
用户不可撤销的同意，拨打网站的电话，包括但不限于客服电话、销售电话等，均可能会被录音，用户没有任何异议。 
2.9
拉一把有权拒绝为与本单位经营同类业务、有业务竞争关系或者其他利害关系的单位及个人提供服务。
3、 隐私保护
3.1
拉一把不对外公开或向第三方提供单个用户的注册资料及用户在使用网络服务时存储在拉一把网的非公开内容，但下列情况除外： 
(1)事先获得用户的明确授权； 
(2)根据有关的法律法规要求； 
(3)按照相关政府主管部门的要求； 
(4)为维护社会公众的利益。 
3.2
在不透露单个用户隐私资料的前提下，拉一把有权对整个用户数据库进行分析并对用户数据库进行商业上的利用。
4、 版权声明
4.1
拉一把特有的标识、版面设计、编排方式、等版权均属拉一把享有，未经拉一把网许可，不得任意复制或转载。 
4.2
拉一把用户发布的所有内容仅代表作者自己的立场和观点，与拉一把无关，由作者本人承担一切法律责任。
5、 免责声明
5.1
用户明确同意其使用拉一把网络服务所存在的风险将完全由其自己承担；因其使用拉一把网络服务而产生的一切后果也由其自己承担，拉一把对用户不承担任何责任。
5.2
拉一把不担保网络服务一定能满足用户的要求，也不担保网络服务不会中断，对网络服务的及时性、安全性、准确性也都不作担保。同时，拉一把不保证能够长期无错误运营，也不保证服务器不受病毒或其他故障的侵扰。如果用户在使用本网站时发生数据丢失的情况，与拉一把无关。
5.3
拉一把不能保证某一招工信息会有一定数量的用户来浏览，也不能保证会有一位特定的用户来浏览。拉一把并不保证所有信息、文本、图形、链接及其它项目的绝对准确性和完整性，故仅供用户参考使用。 
5.4
用户必须独自承担由于使用拉一把或通过拉一把登录到其他站点而形成的全部风险，并独立承担与他人交流信息所造成的后果。拉一把不担保用户发送给另一方用户的资料的真实性、精确性与可靠性。用户对所接受的资料的信任纯属个人风险。
5.5
拉一把仅为用工招工的网络信息发布平台，任何透过拉一把发布的招聘信息及其他产品或者服务均系用户自行发布，拉一把对其合法性概不负责，亦不承担任何法律责任；用户在通过拉一把网得到资讯和信息后，与信息发布人所进行的任何交易均系其双方自主交易，双方若发生纠纷，皆与拉一把无关，拉一把不承担任何法律责任；本公司对于用户由于使用拉一把而造成的任何金钱、商誉、名誉的损失，或任何特殊的、间接的、或结果性的损失都不负任何责任。
6、责任限制条款 
拉一把对用户因使用本网站产生损失而提出的索赔金额，以用户向拉一把已交付的款项之和为限。
7、通知送达
7.1
本协议项下拉一把对于用户所有的通知均可通过网页公告、电子邮件、手机短信或常规的信件传送等方式进行；该等通知于发送之日视为已送达收件人。
7.2 
用户对于拉一把的通知应当通过拉一把对外正式公布的通信地址、传真号码、电子邮件地址等联系信息进行送达。
8、法律管辖 
8.1 
本协议的订立、执行和解释及争议的解决均应适用中国法律并受中国法院管辖。
8.2
如双方就本协议内容或其执行发生任何争议，双方应尽量友好协商解决；协商不成时，任何一方均可向拉一把所在地的人民法院提起诉讼。</string>

</resources>
